# Ousia

./: .gitignore  README.md  debug_diarizer.py  pyproject.toml  requirements.txt  test_ramani.py
docs/: STRUCTURE.md  context.md
ousia/: __init__.py  diarizer.py  graph_engine.py  llm_extractor.py  session_processor.py  visualizer.py  vocal_analyzer.py  whisper_transcriber.py
tests/: test_ousia.py  test_realtime.py
