[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ousia"
version = "0.1.0"
description = "Neuro-inspired psychological graph for therapy sessions"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opensmile",
    "openai",
    "faster-whisper",
    "networkx",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "sentence-transformers",
    "sounddevice",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ousia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
